-Added Upgrades -Added intermediate Replication Core crafting ingredient -Added REI integration as well as prettying up both REI/JEI integrations